Z-index fix Ref T132

--- a/nodelab/app/styles/_nodes.less
+++ b/nodelab/app/styles/_nodes.less
@@ -150,8 +150,9 @@
     }
     .row {
         display:         flex;
-        width:           @expandedNodeWidth - 2 * @expandedNodePadding;
         justify-content: space-between;
+        position:        relative;
+        width:           @expandedNodeWidth - 2 * @expandedNodePadding;
     }
     .row--output-name {
         justify-content: flex-end;
